# matterport3D-skybox-poses

./: .gitignore  README.md  SfM_SequentialPipeline.py  SfM_SequentialPipelinePerRoom.py  procrustes_openMVG_matterport.py  skybox_tripod_relation.py  visualize_depth_renderings.py
blender_scripts/: shadeless_textures.py  skybox_depth_SfM.py
cpp/: CMakeLists.txt  GTPerRoom.cpp  convertFormat.cpp  depth_io.cpp  depth_io.hpp  depth_map_convertor.cpp  perRoomToFull.cpp  plotProjectedRoomPointCloud.cpp  preserveUUID.cpp  sfmDataFromKnownPoses.cpp
